--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "키오스크-상점",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
