--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,7 +8,7 @@ ALLOWED_HOSTS=localhost,127.0.0.1,pos.onebitebitcoin.com
 # DATABASE_URL=postgres://user:password@localhost:5432/kiosk_db
 
 # CORS Settings (add your frontend URLs)
-CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:5174,http://localhost:5175,pos.onebitebitcoin.com
+#CORS_ALLOWED_ORIGINS=["http://localhost:5173", "http://localhost:5174", "http://localhost:5175", "https://pos.onebitebitcoin.com"]
 
 # Email Settings (optional, for password reset)
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
