--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "dev": "vite"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "pinia": "^2.1.7",
-    "vue": "^3.4.15",
-    "vue-router": "^4.2.5",
     "qrcode": "^1.5.3",
-    "axios": "^1.6.0"
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
@@ -37,6 +37,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
+    "vite-plugin-pwa": "^1.0.2",
     "vue-tsc": "^1.8.27"
   }
 }
